force-app/main/default/objects/WAC_Agency__c/WAC_Agency__c.object-meta.xml
<CustomObject>
    <description>WAC Agency list</description>
    <label>WAC Agency</label>
    <nameField>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>WAC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WAC Agency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>