force-app/main/default/objects/WAC_Agency__c/fields/AGENCY_ABBR__c.field-meta.xml
<CustomField>
    <fullName>AGENCY_ABBR__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>AGENCY ABBR</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>