force-app/main/default/objects/WAC_Agency__c/fields/AGENCY_ID__c.field-meta.xml
<CustomField>
    <fullName>AGENCY_ID__c</fullName>
    <externalId>true</externalId>
    <label>AGENCY ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>