force-app/main/default/objects/WAC_Agency__c/fields/ESFT_FILE_LOC_IN__c.field-meta.xml
<CustomField>
    <fullName>ESFT_FILE_LOC_IN__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>ESFT FILE LOC IN</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>