force-app/main/default/objects/WAC_Agency__c/fields/FILE_FORMAT_IN__c.field-meta.xml
<CustomField>
    <fullName>FILE_FORMAT_IN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FILE FORMAT IN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>