force-app/main/default/objects/WAC_Agency__c/fields/LAST_RPT_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_RPT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAST RPT DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>