force-app/main/default/objects/WAC_Agency__c/fields/Share_from_PGE__c.field-meta.xml
<CustomField>
    <fullName>Share_from_PGE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Share from PGE</label>
    <type>Checkbox</type>
</CustomField>