force-app/main/default/objects/WAC_Agency__c/fields/Share_to_PGE__c.field-meta.xml
<CustomField>
    <fullName>Share_to_PGE__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Share to PGE</label>
    <type>Checkbox</type>
</CustomField>