force-app/main/default/objects/WAC_Agency__c/fields/UTILITY_CODE__c.field-meta.xml
<CustomField>
    <fullName>UTILITY_CODE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>UTILITY CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>