force-app/main/default/objects/WAC_Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AGENCY_ABBR__c</columns>
    <columns>AGENCY_ID__c</columns>
    <columns>IS_VALID__c</columns>
    <columns>LAST_RPT_DATE__c</columns>
    <columns>ESFT_FILE_LOC_IN__c</columns>
    <columns>ESFT_FILE_LOC_OUT__c</columns>
    <columns>Share_from_PGE__c</columns>
    <columns>Share_to_PGE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>